--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^9.0.2",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.1.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
