--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^9.0.2",
     "framer-motion": "^4.1.17",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-thunk": "^1.0.0",
     "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.16",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "vite": "^2.3.3"
   }
